# X-Addon-Oxide

./: .gitattributes  .gitignore  .pr-agent.toml  .pr_agent.toml  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT.md  EXPERT_BRIEFING.md  HANDBOOK.md  HANDOFF.md  HEALTH_SCORE.md  LICENSE  Packager.toml  README.md  USER_GUIDE.md  debug_alaska
.agent/rules/: commit_verification.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  pr_agent.yml
AppDir/: .DirIcon  AppRun  xam-addon-oxide.desktop
AppDir/usr/share/applications/: xam-addon-oxide.desktop
assets/packaging/: icon.icns
crates/x-adox-bitnet/: Cargo.toml
crates/x-adox-bitnet/src/: category.rs  flight_prompt.rs  lib.rs  parser.rs
crates/x-adox-bitnet/src/geo/: data.rs  location_aliases.json  mod.rs  regions.json
crates/x-adox-bitnet/tests/: debug_parse.rs  lfpg_test.rs  ordering_guardrails.rs
crates/x-adox-cli/: Cargo.toml
crates/x-adox-cli/src/: main.rs
crates/x-adox-core/: Cargo.toml
crates/x-adox-core/data/: flight_context_bundle.json  flight_context_pois_overlay.json  icao_to_wikipedia.csv  icao_to_wikipedia.json
crates/x-adox-core/src/: apt_dat.rs  archive.rs  cache.rs  discovery.rs  flight_gen.rs  groups.rs  lib.rs  logbook.rs  management.rs  profiles.rs  weather.rs
crates/x-adox-core/src/data/: seed_airports.json
crates/x-adox-core/src/scenery/: classifier.rs  dsf_peek.rs  ini_handler.rs  mod.rs  sorter.rs  validator.rs
crates/x-adox-core/tests/: content_aware_classification.rs  debug_weather.rs  e2e_tests.rs  flight_gen_robustness.rs  flight_gen_stress.rs  flight_gen_test.rs  integration_tests.rs  laminar_suppress_test.rs  pin_survival.rs  profile_persistence_test.rs  regression_aircraft.rs  regression_basket.rs  regression_classification.rs  regression_cross_system.rs  regression_deletion.rs  regression_hashing_migration.rs  regression_icao.rs  regression_installation.rs  regression_literal_paths.rs  regression_path_normalization.rs  regression_pinning.rs  regression_pipeline.rs  regression_profiles.rs  regression_regions.rs  regression_score_modifiers.rs  regression_simheaven.rs  regression_toggle.rs  regression_validator.rs  scenery_robustness.rs  support.rs
crates/x-adox-gui/: Cargo.toml
crates/x-adox-gui/assets/: xam-addon-oxide.desktop
crates/x-adox-gui/docs/: fallback_previews.md
crates/x-adox-gui/locales/: en.yml  zh-CN.yml
crates/x-adox-gui/src/: flight_gen_gui.rs  main.rs  map.rs  style.rs
crates/xam_cli/: Cargo.toml
crates/xam_cli/src/: main.rs
crates/xam_core/: Cargo.toml
crates/xam_core/src/: discovery.rs  lib.rs  scenery.rs
crates/xam_core/tests/: e2e_tests.rs  integration_tests.rs
crates/xam_gui/: Cargo.toml
crates/xam_gui/src/: main.rs  style.rs
docker/: appimage.Dockerfile
docs/: FLIGHT_CONTEXT.md  FLIGHT_GEN_AIRPORT_SOURCES.md  FLIGHT_GEN_BITNET_LEARNING_OPPORTUNITY.md  FLIGHT_GEN_RESEARCH_AND_PLAN.md  NLP_DICTIONARY.md  TESTING.md
patches/iced_graphics/src/text/: paragraph.rs
resources/: flight_context.example.json
scripts/: build_appimage.sh  build_appimage_internal.sh  build_pdf.py  debug_complex_query.py  debug_dedupe_and_filter.py  generate_flight_context_bundle.py  generate_icao_to_wikipedia_from_ourairports.py  inspect_southend_united.py  install.sh  local_ci.sh  make_icns.py  test_all.sh
