[workspace]
resolver = "2"
members = [
    "crates/xam_core",
    "crates/xam_cli",
    "crates/xam_gui",
]

[workspace.dependencies]
xam_core = { path = "crates/xam_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2" # Useful for simple INI, though we might need custom parsing for X-Plane's specific format
thiserror = "1.0"
walkdir = "2.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tempfile = "3.8"
nom = "7.1"
