[workspace]
resolver = "2"
members = [
    "crates/x-adox-core",
    "crates/x-adox-cli",
    "crates/x-adox-gui",
    "crates/x-adox-bitnet",
]

[workspace.dependencies]
x-adox-core = { path = "crates/x-adox-core" }
x-adox-bitnet = { path = "crates/x-adox-bitnet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2" # Useful for simple INI, though we might need custom parsing for X-Plane's specific format
thiserror = "1.0"
walkdir = "2.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tempfile = "3.8"
nom = "7.1"
