[workspace]
resolver = "2"
members = [
    "crates/x-adox-core",
    "crates/x-adox-cli",
    "crates/x-adox-gui",
    "crates/x-adox-bitnet",
]

[workspace.package]
authors = ["StarTuz"]
license = "MIT"
repository = "https://github.com/StarTuz/X-Addon-Oxide"
version = "2.4.3"
edition = "2021"
description = "A modern addon manager for X-Plane"

[workspace.dependencies]
x-adox-core = { path = "crates/x-adox-core" }
x-adox-bitnet = { path = "crates/x-adox-bitnet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2" # Useful for simple INI, though we might need custom parsing for X-Plane's specific format
thiserror = "1.0"
walkdir = "2.4"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tempfile = "3.8"
nom = "7.1"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"

[patch.crates-io]
iced_graphics = { path = "patches/iced_graphics" }

[profile.release]
lto = "thin"
strip = true
panic = "abort"
