[package]
name = "x-adox-bitnet"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
regex = "1.12.2"
directories = "5.0"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"
