[package]
name = "x-adox-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
x-adox-core = { workspace = true }
x-adox-bitnet = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
