[package]
name = "x-adox-core"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
nom = { workspace = true }
anyhow = { workspace = true }
x-adox-bitnet = { path = "../x-adox-bitnet" }
regex = "1.12.2"
directories = "5.0"
serde_json = { workspace = true }
chrono = { workspace = true }
rayon = { workspace = true }
rand = "0.8"
log = "0.4"
csv = "1.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
flate2 = "1.1.9"
zip = "2"
sevenz-rust2 = { version = "0.12", features = ["aes256", "util"] }
unrar = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
simplelog = "0.12"
