[package]
name = "x-adox-gui"
version = "2.0.3"
edition = "2021"
description = "A modern addon manager for X-Plane"
authors = ["StarTuz"]
license = "MIT"
repository = "https://github.com/StarTuz/X-Addon-Oxide"

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "image", "advanced", "lazy", "svg"] }
native-dialog = "0.7"
directories = "5"
zip = "2"
lru = "0.12"
x-adox-core = { workspace = true }
x-adox-bitnet = { path = "../x-adox-bitnet" }
serde_json = "1.0"
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
url = "2"
futures = "0.3"
chrono = "0.4"
