[package]
name = "x-adox-gui"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.13", features = ["tokio", "canvas", "image", "advanced", "lazy", "svg"] }
rfd = "0.15"
directories = "5"
zip = "2"
lru = "0.12"
x-adox-core = { workspace = true }
x-adox-bitnet = { path = "../x-adox-bitnet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
ureq = "2.9"
tokio = { version = "1", features = ["rt", "sync", "time"] }
url = "2"
futures = "0.3"
chrono = "0.4"
sevenz-rust2 = { version = "0.12", features = ["aes256", "util"] }
unrar = "0.5"
log = "0.4"
simplelog = "0.12"
html-escape = "0.2"
open = "5"

[package.metadata.packager]
product_name = "X-Addon-Oxide"
identifier = "com.startux.x-adox"
publisher = "StarTuz"
copyright = "Copyright © 2026 StarTuz"
category = "Utility"
icons = [
    "../../assets/packaging/icon.ico",
    "../../assets/packaging/icon.icns",
    "../../assets/packaging/icon_512.png"
]
formats = ["nsis", "dmg", "app", "appimage"]

[package.metadata.packager.nsis]
installMode = "perMachine"
compression = "lzma"
languages = ["English"]
appdata-paths = ["$APPDATA/x-adox/X-Addon-Oxide"]

[package.metadata.packager.windows]
# Add windows specific signing if needed later

[package.metadata.packager.macos]
minimum-system-version = "10.15"
entitlements = "../../assets/packaging/entitlements.plist"


